--- a/app/src/main/res/layout/recyclelist_item.xml
+++ b/app/src/main/res/layout/recyclelist_item.xml
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="@+id/guideline" />
 
         <ImageView
-            android:id="@+id/moviePoster"
+            android:id="@+id/PosterImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
