--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigaion_home"
+        android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home"
         android:title="@string/Home"/>
 
     <item
-        android:id="@+id/navigation_favorties"
+        android:id="@+id/navigation_favorites"
         android:icon="@drawable/ic_favorite"
         android:title="@string/Favorites"/>
 
     <item
-        android:id="@+id/navigaion_search"
+        android:id="@+id/navigation_search"
         android:icon="@drawable/ic_search"
         android:title="@string/Search"/>
 
