--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -64,10 +64,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.9" />
+        app:layout_constraintGuide_percent="0.85" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/searchButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#00FFFFFF"
