--- a/app/src/main/res/layout/activity_tickets.xml
+++ b/app/src/main/res/layout/activity_tickets.xml
@@ -22,6 +22,8 @@
         android:id="@+id/selectHourSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:focusable="auto"
+        android:focusableInTouchMode="true"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
